--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -34,7 +34,7 @@ jobs:
 
     - uses: actions/checkout@v4
     - name: Build Docker container image
-      run: docker build -t . ghcr.io/${{ github.repository_owner }}/resume-renderer:latest
+      run: docker build -t ghcr.io/${{ github.repository_owner }}/resume-renderer:latest .
 
     - name: Push Docker container image
       run: docker push ghcr.io/${{ github.repository_owner }}/resume-renderer:latest
