--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -22,8 +22,15 @@ on:
   workflow_dispatch:
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run tests
+        uses: ./rust.yml
+    
   build:
     runs-on: ubuntu-latest
+    needs: test
     steps:
     - name: Log in to GitHub Container Registry
       uses: docker/login-action@v2
