use local workflow instead of source controlled one

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -23,7 +23,7 @@ on:
 
 jobs:
   test:
-    uses: "${{ github.repository }}/.github/workflows/rust.yml@main"
+    uses: ./.github/workflows/rust.yml
 
   build:
     runs-on: ubuntu-latest
