--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -25,16 +25,21 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     steps:
+    - uses: actions/checkout@v4
+
     - name: Log in to GitHub Container Registry
+      if: github.event_name == 'push'
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - uses: actions/checkout@v4
-    - name: Build Docker container image
-      run: docker build -t ghcr.io/${{ github.repository_owner }}/resume-renderer:latest .
-
-    - name: Push Docker container image
-      run: docker push ghcr.io/${{ github.repository_owner }}/resume-renderer:latest
+    - name: Build and push Docker container image
+      if: github.event_name == 'push'
+      uses: docker/build-push-action@v4
+      with:
+        tags: ghcr.io/${{ github.repository_owner }}/resume-renderer:latest
+        cache-from: source=gha
+        cache-to: type=gha
+      
