--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -40,6 +40,6 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         tags: ghcr.io/${{ github.repository_owner }}/resume-renderer:latest
-        cache-from: source=gha
+        cache-from: type=gha
         cache-to: type=gha
       
