--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -41,5 +41,5 @@ jobs:
       with:
         tags: ghcr.io/${{ github.repository_owner }}/resume-renderer:latest
         cache-from: type=gha
-        cache-to: type=gha
+        cache-to: type=gha,mode=max
       
