--- a/data/resume.yml
+++ b/data/resume.yml
@@ -76,25 +76,29 @@ projects:
     source_link: https://github.com/johndoe/project2
     demo_link: https://example.com
 skills:
-  languages:
-    - Java
-    - Python
-    - C/C++
-    - SQL (Postgres)
-    - JavaScript
-    - HTML/CSS
-    - R
-  frameworks:
-    - React
-    - Node.js
-    - Flask
-    - JUnit
-    - WordPress
-    - Material-UI
-    - FastAPI
-  databases:
-    - PostgreSQL
-    - MongoDB
-  tools:
-    - Ansible
-    - Docker
+  - name: Languages
+    skills:
+      - Java
+      - Python
+      - C/C++
+      - SQL (Postgres)
+      - JavaScript
+      - HTML/CSS
+      - R
+  - name: Frameworks
+    skills:
+      - React
+      - Node.js
+      - Flask
+      - JUnit
+      - WordPress
+      - Material-UI
+      - FastAPI
+  - name: Databases
+    skills:
+      - PostgreSQL
+      - MongoDB
+  - name: Tools
+    skills:
+      - Ansible
+      - Docker
