--- a/src/test/templates/skills.tmpl.yml
+++ b/src/test/templates/skills.tmpl.yml
@@ -1,23 +1,27 @@
 skills:
-  languages:
-    - Java
-    - Python
-    - C/C++
-    - SQL (Postgres)
-    - JavaScript
-    - HTML/CSS
-    - R
-  frameworks:
-    - React
-    - Node.js
-    - Flask
-    - JUnit
-    - WordPress
-    - Material-UI
-    - FastAPI
-  databases:
-    - PostgreSQL
-    - MongoDB
-  tools:
-    - Ansible
-    - Docker
+  - name: Languages
+    skills:
+      - Java
+      - Python
+      - C/C++
+      - SQL (Postgres)
+      - JavaScript
+      - HTML/CSS
+      - R
+  - name: Frameworks
+    skills:
+      - React
+      - Node.js
+      - Flask
+      - JUnit
+      - WordPress
+      - Material-UI
+      - FastAPI
+  - name: Databases
+    skills:
+      - PostgreSQL
+      - MongoDB
+  - name: Tools
+    skills:
+      - Ansible
+      - Docker
