--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -41,4 +41,5 @@ jobs:
       if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
       uses: docker/build-push-action@v4
       with:
+        push: true
         tags: ghcr.io/${{ github.repository_owner }}/resume-renderer:latest
